# optimus-py

./: .gitignore  app.py  main.py  test.db
opt_sql/: Cargo.toml
project_db/: Cargo.toml  project_db.pyi
project_db/src/: class_py.rs  db.rs  lib.rs  models.rs  py_project_table.rs  py_snippet_table.rs  py_tables.rs  schema.rs
