[package]
name = "project_db"
version = "1.3.2"
edition = "2024"

[lib]
# lib name == package name
name = "project_db"
crate-type = ["cdylib"]

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
pyo3 = { version = "0.24.1", features = ["extension-module"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

[package-metadata.maturin]
include-pyi = true

[profile-release]
target-cpu = "native"
codegen-units = 1
panic = "abort"
opt-level = 3
lto = false

